Museum Puri Lukisan - done

--- a/src/14. Museum Puri Lukisan Ubud.jade
+++ b/src/14. Museum Puri Lukisan Ubud.jade
@@ -31,4 +31,12 @@ html
       section.emphatic-text(data-bespoke-backdrop='emphatic')
         p Museum ini buka dari jam 09:00 - 18:00 (waktu Bali) dan buka setiap hari, kecuali pada hari raya Nyepi. Tiket masuk akan dikenakan sebesar Rp 75.000 per orang dewasa. Harga tiket masuk sudah termasuk minuman yang menyegarkan dan kue. Untuk anak-anak yang berumur di bawah 15 tahun dan ditemani oleh orang tua, tidak akan dikenakan biaya tiket masuk.
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Kolesi Seni Museum Puri Lukisan
+        p Karya seni di museum ini diletakkan di empat bangunan berbeda di komplek museum. Untuk dapat melihat semua hasil seni di museum ini, setidaknya anda harus meluangkan waktu kurang lebih 2 jam. Koleksi lukisan mulai dari gaya lukis Batuan, gaya lukis Sanur, gaya lukis Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img(src="images/puri-lukisan-museum-ubud.jpg")
+
+
    script(src='build/build.js')
