Pura Gunung Lebah - Asal Usul Nama Pura

--- a/src/15. Pura Gunung Lebah.jade
+++ b/src/15. Pura Gunung Lebah.jade
@@ -33,5 +33,20 @@ html
       section.emphatic-text(data-bespoke-backdrop='emphatic')
         p Awal terbentuknya desa Ubud dimulai dari didirikannya pemukiman penduduk di dekat pura Gunung Lebah. Karena di daerah sungai Campuhan banyak terdapat jenis tanaman yang dapat digunakan sebagai obat, Maka desa ini disebut Ubud yang berasal dari kata Ubad, artinya Obat.
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Asal Usul Nama Pura
+        p Nama dari Pura Gunung Lebah, berasal dari gunung yang artinya bukit sedangkan lebah artinya lembah. Jadi arti nama dari pura ini adalah bukit kecil yang anda di lembah sungai Campuhan Ubud. Bukit kecil yang ada di lembah sungai Campuhan adalah pertemuan dua arus sungai, yaitu arus sungai Oos yang berasal dari kata Usada (bahasa halus Bali untuk obat) dan arus sungai Cerik (sungai kecil).
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Pura Gunung Lebah dikelilingi oleh pepohonan yang sangat rimbun dan suasananya sangat tenang, karena itu pura ini digunakan sebagai tempat meditasi. Suasana asri, indahnya arsitektur pura serta lokasinya dekat dengan tempat wisata di Ubud, maka pura ini sangat disukai wisatawan asing untuk berkunjung.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Dewa yang dipuja di Pura ini adalah Dewa Danuring Gunung Batur dan pura ini memiliki peran dalam penyelenggaraan upacara pemberisihan alam yang diadakan setiap 100 tahun. Setiap diadakannya upacara piodalan (upacara reguler) di pura ini, akan dipentaskan kesenian tari Calonarang pura Gunung Lebah. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img(src="images/Pura-Gunung-Lebah-Bali.jpg")
+
+
+
 
    script(src='build/build.js')
