--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Museum Puri Lukisan Ubud
+    title Pura Gunung Lebah
 
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
@@ -13,30 +13,40 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Museum Puri Lukisan Ubud
-        img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 250 width = 600)
+        h1 Pura Gunung Lebah
+        img.big(src="images/PGL.jpg" height = 250 width = 600)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Tempat wisata Ubud sangat terkenal akan wisata kesenian dan budaya, dan merupakan pusat dari lokasi museum di Bali. Museum seni yang ada di Ubud seperti adalah museum lukisan seperti Arma museum, museum Neka dan museum Puri Lukisan Ubud.
-         P Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu. 
+        p Keberadaan pura di Bali memiliki daya tarik bagi wisatawan karena keunikan, sejarah dan nilai religiusnya. Hal ini membuat pura menjadi salah satu tujuan wisatawan saat berlibur di Bali, selain tempat umat Hindu sembahyang. Wisatawan mancanegara dan wisatawan domestik selalu menjadwalkan liburan mereka saat di Bali untuk wisata ke pura. Salah satu pura yang ada di tempat wisata Ubud yang layak anda kunjungi saat di Bali adalah Pura Pura Gunung Lebah.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu.
+        p Lokasi dari pura Gunung Lebah berada di bawah jembatan dari sungai Campuhan Ubud. Melihat dari lokasinya yang berada di bawah Jembatan sungai Campuhan Ubud, termasuk lokasi pura yang berbeda dari biasanya. Tahukah anda, pura ini termasuk dalam kategori pura Kahyangan Jagat? Artinya semua umat Hindu dapat bersembahyang di pura Gunung Lebah.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/museum-puri-lukisan-di-ubud.jpg" height = 300 width = 500)
-        h3 Lokasi Museum Puri Lukisan Ubud
-        p  Tentunya anda ingin tahu letak lokasi dari museum Puri Lukisan di Ubud. Lokasinya berada di jalan Raya Ubud. Sangat dekat dengan lokasinya dari puri Ubud dan pasar seni Ubud, jaraknya sekitar 300 meter ke barat. Untuk melihat peta lokasi silakan klik link ini. Lokasi Museum Puri Lukisan Di Ubud.
+        h3 Sejarah Pura Gunung Lebah Campuhan Ubud Bali
+        p  Asal usul pura Gunung Lebah dibangun pada abad ke 8 oleh seorang pendeta dari India. Pendeta ini bernama Rsi Markandeya, salah satu pendeta yang banyak mendirikan pura di Bali dan salah satunya pura terbesar di Bali, pura Besakih. Pendirian pura ini awal mulanya, Rsi Markandeya merasa adanya kekuatan magis dari lembah sungai Campuhan Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Museum ini buka dari jam 09:00 - 18:00 (waktu Bali) dan buka setiap hari, kecuali pada hari raya Nyepi. Tiket masuk akan dikenakan sebesar Rp 75.000 per orang dewasa. Harga tiket masuk sudah termasuk minuman yang menyegarkan dan kue. Untuk anak-anak yang berumur di bawah 15 tahun dan ditemani oleh orang tua, tidak akan dikenakan biaya tiket masuk.
+        p Karena adanya kekuatan magis di lembah sungai Campuhan, setelah beliau kembali dari perjalanan mendirikan pura di kaki Gunung Agung (pura Besakih). Beliau mendirikan pura di lembah sungai Campuhan, yang pada awalnya di gunakan sebagai tempat meditasi. Sejarah pura Gunung Lebah sangat terkait dengan nama desa wisata di Bali yang saat ini sangat terkenal ke mancanegara yaitu Ubud.
+
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Kolesi Seni Museum Puri Lukisan
-        p Karya seni di museum ini diletakkan di empat bangunan berbeda di komplek museum. Untuk dapat melihat semua hasil seni di museum ini, setidaknya anda harus meluangkan waktu kurang lebih 2 jam. Koleksi lukisan mulai dari gaya lukis Batuan, gaya lukis Sanur, gaya lukis Ubud.
+        p Awal terbentuknya desa Ubud dimulai dari didirikannya pemukiman penduduk di dekat pura Gunung Lebah. Karena di daerah sungai Campuhan banyak terdapat jenis tanaman yang dapat digunakan sebagai obat, Maka desa ini disebut Ubud yang berasal dari kata Ubad, artinya Obat.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/puri-lukisan-museum-ubud.jpg")
+        h2 Asal Usul Nama Pura
+        p Nama dari Pura Gunung Lebah, berasal dari gunung yang artinya bukit sedangkan lebah artinya lembah. Jadi arti nama dari pura ini adalah bukit kecil yang anda di lembah sungai Campuhan Ubud. Bukit kecil yang ada di lembah sungai Campuhan adalah pertemuan dua arus sungai, yaitu arus sungai Oos yang berasal dari kata Usada (bahasa halus Bali untuk obat) dan arus sungai Cerik (sungai kecil).
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Pura Gunung Lebah dikelilingi oleh pepohonan yang sangat rimbun dan suasananya sangat tenang, karena itu pura ini digunakan sebagai tempat meditasi. Suasana asri, indahnya arsitektur pura serta lokasinya dekat dengan tempat wisata di Ubud, maka pura ini sangat disukai wisatawan asing untuk berkunjung.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Dewa yang dipuja di Pura ini adalah Dewa Danuring Gunung Batur dan pura ini memiliki peran dalam penyelenggaraan upacara pemberisihan alam yang diadakan setiap 100 tahun. Setiap diadakannya upacara piodalan (upacara reguler) di pura ini, akan dipentaskan kesenian tari Calonarang pura Gunung Lebah. 
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img(src="images/Pura-Gunung-Lebah-Bali.jpg")
+
+
 
 
    script(src='build/build.js')
