Museum Neka Ubud Bali - update file sampai selesai

--- a/src/16. Museum Neka Ubud Bali.jade
+++ b/src/16. Museum Neka Ubud Bali.jade
@@ -34,11 +34,35 @@ html
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
         h3 Jam Buka Museum Dan Biaya Tiket Masuk
-        p Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.
+        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.
         ulcircle
          li Senin-Sabtu 09:00 - 17.00
          li Minggu 13:00 - 17.00
          li Hari Libur National tutup
 
-   script(src='build/build.js')
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Tempat Lukisan Pelukis Affandi
 
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p.bullet Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:
+        ol
+          li Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.
+          li Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.
+        p Sumber data dari, <a href = "http://www.museumneka.com/default.asp">Museum Neka</a>.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Cara Terbaik Mengunjungi Museum Neka Ubud Bali
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Kenapa kami sarankan anda menggunakan driver. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang anda harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, kami sarankan anda menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda tidak terlalu familiar akan tempat wisata di Ubud, kami sarakan anda untuk mencari paket Ubud Tour. Sebagain besar penyedia paket liburan di Bali, telah memasukkan biaya tiket masuk objek wisata dan makan siang. Dengan membeli paket tour ke Ubud, jadwal liburan anda terencana dan budget liburan sudah di ketahui dari awal.
+
+   script(src='build/build.js')
