--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Museum Blanco Ubud
+    title Pura Gunung Lebah
 
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
@@ -13,43 +13,57 @@ html
     article
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h1 Museum Blanco Ubud
-        img.big(src="images/Museum-Blanco-Ubud.jpg" width=400)
-        
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Wisata di Bali tidak akan lengkap rasanya jika tidak wisata ke Ubud Bali. Tempat wisata di Ubud salah satu favorit wisatawan terutama wisatawan mancanegara untuk berlibur. Tempat wisata ini menawarkan beranekaragam aktivitas wisata yang berbeda dengan tempat wisata fovorit lainya di Bali.Aktivitas wisata yang dapat anda lakukan di Ubud seperti wisata rafting di sungai Ayung, melihat pemandangan sawah terasering di Tegallalang dan tentunya menonton pentas kesenian tari dan melihat karya seni lukis seniman terkenal.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Tempat wisata di Ubud, lebih cocok bagi wisatawan yang ingin wisata ke daerah pedesaan dengan suasana tenang dengan lingkungan alam yang masih asri. Jika anda liburan bersama anak-anak, tentunya Ubud bukan tempat wisata yang cocok buat liburan untuk anak-anak anda. Tempat wisata Kuta, lebih cocok untuk liburan bersama anak di Bali atau wisata bahari di pantai Tanjung benoa dengan mencoba watersport di Tanjung Benoa. Sebagian besar para pepcinta seni lukis, selalu menyempatkan diri untuk liburan ke Ubud. Karena di tempat wisata Ubud, terdapat banyak museum yang menawarkan koleksi lukisan dari pelukis terkenal mancanegara dan pelukis Indonesia. Salah satu museum yang sangat terkenal di Ubud adalah Museum Blanco Ubud.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img.big(src="images/antonio-blanco-museum-ubud.jpg" height = 250 width = 600)
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3 Sejarah Museum Antonio Blanco Ubud Bali
-        p  Pelukis keturunan Spanyol dan Amerika bernama Mario Antonio Blanco, sangat terkenal dengan karya seni yang menggambarkan wanita. Pada tahun 1953, dia menikahi seorang penari Bali dan menggunakan istrinya sebagai model lukisan yang bernama Ni Ronji. Pemilik museum Blanco di Ubud adalah seorang pria kelahiran Manila, Filipina 15 September 1912, membangun sebuah rumah sekaligus museum di atas tanah pemberian Raja Ubud dari Puri Saren, Tjokorde Gde Agung Sukawati.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Meseum yang terletak di areal perbukitan sungai Campuhan Ubud, setiap hari museum ini tidak pernah sepi pengunjung. Sekitar 100 orang sampai 150 orang wisatawan lokal maupun mancanegara, tertarik melihat hasil karya sang maestro. Menurut wisatawan dari Spayol, Amerika Serikat, Rusia, Jepang dan Australia yang datang ke Museum Blanco Ubud, karya lukis Antonio Blanco memiliki nilai seni yang tinggi terhadap kehidupan orang Bali.
-        img(src="images/antonio-blanco.jpg" width=400)
+        h1 Museum Neka Ubud Bali
+        img.big(src="images/museumneka2.jpg" height = 250 width = 600)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        h2 Penghargaan Terhadap Antonio Blanco
-        p Antonio Blanco menerima banyak penghargaan akan hasil karya seninya, seperti Tiffany Fellowship (sebuah penghargaan khusus dari perkumpulan Artist di Honolulu Hawai), penghargaan Chevalier du Sahametrai di Kamboja, penghargaan dari presiden Soekarno dan hadiah Seni Kritik di Spanyol. Antonio Blaco juga mendapatkan penghargaan dari Raja Spanyol yang pada saat itu Juan Carlos I, dengan memberikan gelar >>Don<< di depan namanya.
+        p Aktivitas wisata Ubud Bali, sangat terkenal sampai ke mancanegara dan banyak hal menarik yang wisatawan, dapat lakukan di tempat wisata Ubud. Salah satu tempat menarik di Ubud Bali, yang banyak mendapat kunjungan dari wisatawan adalah Museum Neka Ubud Bali. Jika anda pernah mendengar pelukis terkenal Indonesia, yang bernama Affandi dan Bagong Kussudiardjo. Maka Museum Neka Ubud, salah satu tempat tempat wisata di Ubud Bali yang harus di kunjungi.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-         p Mantan Presiden Soeharto dan Presiden Soekarno, sangat mengagumi lukisan yang memfokuskan pada keindahan fisik perempuan Bali. Sekitar 300 karya seni tersimpan dengan rapi di museum Antonio Blanco di Ubud, yang dibangun pada tanggal 28 Desember 1998.
-         p Don Antonio Blanco meninggal dunia pada tanggal 10 Desember 1999 diDenpasar, karena penyakit ginjal dan hati. Antonio Blanco memiliki empat orang anak yaitu, Cempaka, Mario, Orchid dan Mahadewi. Dari keempat anaknya, hanya Mario Blanco yang mewarisi bakat sang ayah. Namun hasil karyanya lebih menampilkan pada kehidupan alam dan lingkungan di sekitarnya berbeda dengan sang ayah.
+        h3 Neka Art Museum Di Ubud
+        p Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud. Jika anda ingin melihat lokasi museum Neka di peta, silakan klik link ini, peta lokasi museum Neka. 
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Alamat Museum Blanco Ubud
-        img.big(src="images/don-antonio-blanco-museum-ubud.jpg" height = 250 width = 500)
-        p Museum Blanco Ubud terletak di desa Campuan, Ubud Bali - Indonesia P.O. Box 80571. Untuk mendapatkan peta lokasi dari Museum Blanco Ubud, silakan klik link ini, <a href="https://www.google.com/maps/place/The+Blanco+Renaissance+Museum/@-8.505593,115.254256,17z/data=!3m1!4b1!4m2!3m1!1s0x2dd23d3de1f0053d:0x3c7b62c135ac609"> The Blanco Renaissance Museum</a>
+        p  Museum Neka Ubud Bali, dibuka pada tahun 1982. Nama Museum berasal dari nama seorang guru, yang memiliki kegemaran dalam mengkoleksi lukisan, nama guru tersebut adalah Suteja Neka.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Berbagai fasilitas juga disediakan oleh pengelola museum bagi wisatawan yang datang. Seperti restoran, art shop, toilet dan ruang santai. Cukup dengan membayar tiket Rp 30.000 (untuk pengunjung warganegara Indonesia) anda bebas berkeliling di areal museum. Sedangkan untuk wisatawan asing, akan dikenakan biaya tiket masuk museum Blanco Ubud sebesar Rp 50.000 per orang. Jam buka museum adalah setiap hari, termasuk hari libur dan hari minggu, dari jam 09:00 - 17:00.
-        p
-        img.big(src="images/antonio-blanco-museum-ubud-bali.jpg" height = 150 width = 400)
+        p Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. Mengasikan bukan untuk wisata di Bali anda?
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        img.big(src="images/Museumneka.jpg" height = 250 width = 600)
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Jam Buka Museum Dan Biaya Tiket Masuk
+        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.
+        ulcircle
+         li Senin-Sabtu 09:00 - 17.00
+         li Minggu 13:00 - 17.00
+         li Hari Libur National tutup
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Tempat Lukisan Pelukis Affandi
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p.bullet Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:
+        ol
+          li Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.
+          li Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.
+        p Sumber data dari, <a href = "http://www.museumneka.com/default.asp">Museum Neka</a>.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Cara Terbaik Mengunjungi Museum Neka Ubud Bali
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Kenapa kami sarankan anda menggunakan driver. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang anda harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, kami sarankan anda menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda tidak terlalu familiar akan tempat wisata di Ubud, kami sarakan anda untuk mencari paket Ubud Tour. Sebagain besar penyedia paket liburan di Bali, telah memasukkan biaya tiket masuk objek wisata dan makan siang. Dengan membeli paket tour ke Ubud, jadwal liburan anda terencana dan budget liburan sudah di ketahui dari awal.
 
    script(src='build/build.js')
 
