--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Yeh Pulu Relief
+    title Pura Gunung Lebah
 
 
     link(rel='stylesheet', type='text/css', href='build/build.css')
@@ -11,55 +11,86 @@ html
   body
 
     article
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Yeh Pulu 
-        img(src="images/relief-yeh-pulu.jpg")
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Salah satu tempat wisata budaya di Bali yang unik dan jarang wisatawan tahu adalah pura Yeh Pulu Ubud Bali. Sebagian besar wisatawan yang berkunjung ke pura Yeh Pulu Ubud adalah wisatawan asing. Wisatawan domestik sangat jarang mengunjungi objek wisata di Bali ini. Hal ini disebabkan karena kurangnya promosi akan tempat wisata sejarah ini, untuk wisatawan domestik. Di halaman situs ini, saya akan menuliskan kepada pembaca tentang pura Yeh Pulu Bali, betapa uniknya dan bersejarahnya lokasi wisata Yeh Pulu Ubud, sehingga layak untuk dijadikan salah satu objek wisata di Bali yang harus dikunjungi.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h3 Lokasi Pura Yeh Pulu Ubud Bali
-        p Lokasi dari objek wisata Yeh Pulu Bali, berada di desa Bedulu, Kecamatan Blahbatuh, Kabupaten Gianyar. Karena terletak di desa Bedahulu, pura Yeh Pulu juga sering disebut dengan nama Yeh Pulu Bedulu. Untuk berwisata ke objek wisata Yeh Pulu, anda tidak harus secara khusus meluangkan waktu untuk ke objek wisata di Ubud ini. Karena tempat wisata Yeh Pulu, searah dengan rute Kuta - Denpasar - Ubud - Kintamani.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/pura-yeh-pulu.jpg")
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Rute wisata Kuta - Denpasar - Ubud - Kintamani, salah satu rute favorit wisatawan dalam memilih paket tour Bali. Salah satu yang paling favorit adalah paket tour Ubud Kintamani. Jika anda memang menyukai wisata ke tempat bersejarah, maka pura Goa Gajah jangan anda lewatkan, karena lokasinya berdekatan dengan Yeh Pulu Relief.Yang unik dari lokasi Pura ini, karena terletak di lokasi persawahan. Lokasi persawahaan sangat luas dan tersebar di segala penjuru desa Bedulu. Jadi saat wisata, anda tidak hanya melihat relief sejarah pura, selain itu anda juga akan melihat pemandangan persawahaan yang  tertata rapi.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Untuk mencapai lokasi tempat wisata Pura Yeh Pulu, cara terbaik adalah menggunakan jasa sewa mobil di Bali dengan sopir. Karena mencari lokasi dari tempat wisata ini, lumayan susah dan sangat jarang tersedia taksi untuk mengantar anda kembali. Selain itu menggunakan jasa sewa mobil + driver di Bali, selain harga total lebih murah, anda juga tidak perlu memikirkan akan tempat parkir dan kemacetan di jalan raya.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        img(src="images/yeh-pulu-relief.jpg")
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Untuk mencapai lokasi dari pura ini, anda harus melewati jalanan setapak lumayan kecil. Jalan setapak ini sangat terawat, baik dari sisi kebersihan dan keindahan. Perawatan akan jalan setapak ini, dilakukan oleh masyarakat sekitar yang memiliki organisasi pertanian, dengan nama Subak. Di lokasi objek wisata ini, tersedia sarana tempat parkir, toilet, toko penjual oleh-oleh khas Bali dan jasa pemandu wisata, jika anda ingin tahu lebih tentang sejarah Pura Yeh Pulu Bedulu.
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Tempat Wisata Pura Dengan Relief Kuno
-        img.big(src="images/yeh-pulu-bedulu.jpg" height = 300 width = 600)
+        h2 Tari Barong Ubud
+        img.big(src="images/TariBarongUbud.jpg" height = 250 width = 600)
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')        
-        p Di objek wisata ini, anda akan dapat melihat banyak relief kuno yang sangat unik. Karena terdapat banyak relief di tempat wisata pura ini, maka tempat wisata ini sering disebut dengan nama relief Yeh Pulu. Relief bersejarah yang terdapat di sini, di pahat pada batu cadas, dan panjang relief sekitar 25 meter dengan lebar relief 2 meter.
+        p Salah satu objek wisata di Bali yang patut anda kunjungi selama liburan di pulau dewata adalah desa Ubud. Ada beberapa alasan kenapa kami merekomendasi anda untuk berwisata ke Ubud. Hal ini di karenakan, tempat wisata di Ubud memiliki berbagai macam pilihan tempat wisata, baik untuk wisata alam, wisata budaya dan wisata seni, khususnya seni lukis dan seni tari seperti tari Barong Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Sejarah Pura & Arti Nama Yeh Pulu Bedulu
-
-        p Sejarah relief yang terdapat di lokasi wisata ini, menceritakan tentang sejarah kehidupan masyarakat Bali kuno, pada masa kerajaan Bedahulu. Tidak hanya relief didinding, lubang menjorok kedalam untuk tempat bertapa, juga ada di objek wisata ini. Konon tempat ini digunakan untuk bertapa raja Bedahulu, sebelum beliau kalah berperang melawan kerajaan Majapahit pada tahun 1343.
+        p Ubud sangat terkenal akan wisata alam seperti aktivitas rafting di sungai Ayung Ubud, wisata ke museum seni lukis atau menonton pertunjukan seni tari, yang hampir setiap hari diadakan di berbagai tempat di objek wisata Ubud.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p  Yeh artinya air dan Pulu artinya gentong yang dulunya digunakan sebagai tempat beras. Gentong ini ditempatkan di bagian barat dari Yeh Pulu relief dan berada tengah tempat air suci. Jika anda menyukai wisata pura di Bali, untuk informasi, salah satu pura di Bali yang paling disukai wisatawan untuk di kunjungi adalah pura Ulun Danu Beratan. Jika anda sempat melihat di brosur atau majalah wisata yang memperlihatkan pura berada di tengah danau, inilah pura Ulun Danu Beratan.
+        p Saking terkenalnya objek wisata Ubud, baik di kalangan wisatawan domestik dan wisatawan mancanegara, membuat Ubud tidak pernah sepi dari kunjungan wisatawan setiap harinya. Hal ini membuat objek wisata Ubud memiliki begitu banyak sarana pariwisata, terutama tempat menginap, baik dari hotel maupun villa.
 
       section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Aktivitas Wisata Alam Ubud
+        p Para pengusaha travel agent di Bali, juga berlomba menawarkan berbagai macam paket wisata, yang menfokuskan akan paket liburan di Ubud Bali. Kami juga tidak ketinggalan dalam menawarkan paket liburan ke Ubud. Tentunya setiap wisatawan yang berlibur di Bali tidak semua memilih untuk membeli paket wisata ke Ubud, ada banyak wisatawan yang juga memilih untuk wisata di Ubud tanpa membeli paket wisata.
 
-        p Selain wisata ke pura ini, tempat wisata di Ubud Bali, juga menyediakan aktivitas wisata alam yang bersifat petualangan. Wisata petualangan alam di Ubud yang paling disukai wisatawan domestik adalah Bali rafting. Salah satu tempat rafting di Bali yang bersifat rekreasi adalah sungai Ayung Ubud.
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Sebagian dari mereka dalam berwisata di Ubud tentunya akan memerlukan sarana tranfortasi, dan wisatawan sebagian besar akan mengunakan jasa sewa mobil dan driver di Bali. Dengan alasan murah dan tidak perlu memikirkan tempat parkir dan jalanan macet.
 
-        p Sungai Ayung Ubud, setiap hari ramai dengan kunjungan wisatawan yang ingin melakukan aktivitas rafting. Salah satu perusahaan yang terkenal dan peritis rafting di Ubud bernama Sobek rafting. Wisatawan domestik saat ini telah menjadikan wisata rafting sebagai salah satu aktivitas wisata di Bali.
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h3 Pertunjukan Kesenian Tari Barong Ubud
+        p Saat anda wisata di Bali, tentunya anda tidak hanya ingin diam di hotel atau menghabiskan waktu ke shoping mall, tanpa melihat sesuatu yang unik dan hanya ada di Bali, seperti pertujukan kesenian khas tradisional budaya Bali. Salah satu pertunjukan seni yang paling di cari di Ubud adalah pertunjukan tari Barong Ubud dan tari kecak Ubud.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Tarian Barong sebuah kesenian tari tradisional di Bali, yang sebagian penarinya menggunakan topeng dan kostum yang menyerupai hewan. Jenis tari Barong yang paling banyak di minati adalah tari Barong Ket. Lalu apa itu Barong Ket?
+        p Jika di lihat dari bentuknya, Barong Ket merupakan perpaduan bentuk binatang antara harimau, singa, ular naga dan sapi. Seluruh badan dari Barong Ket, dihiasi dengan ukiran tradisional Bali yang berbahan dasar kulit sapi dan dalam ukiran tersebut terdapat puluhan cermin kaca yang berukuran kecil.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jadi pada saat ada cahaya yang mengenai cermin kaca, membuat wujud dari Barong kelihatan berkilauan. Untuk membuat tampak seperti bintang, maka di Barong Ket anda akan melihat banyak Bulu. Bulu ini terbuat dari serat daun tanaman yang dikeringkan dan biasanya mengunakan daun pandan dan ijuk
+        p Untuk menarikan Barong Ket diperlukan dua orang penari, kedua penari ini memiliki nama Juru Bapang atau sering juga disebut dengan nama Juru Saluk. Penari di bagian kepala Barong di namai Juru Bapang satu dan penari yang di bagian ekor dinamai Juru Bapang dua. Tentunya pada saat pementasan tarian Barong Ket, juga disertai pementasan tarian Rangda.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Rangda adalah sebuah sosok yang kelihatan sangat seram, karena di gunakan untuk mewakili simbul keburukan. Sedangakan Barong Ket adalah sibul kebajikan. Oleh karena itu, setiap pementasan tarian Barong Ket, pastinya akan ada pementasan Rangda. Hal ini meyimbulkan perbedaan abadi antara kebajikan dan keburukan.
+        p Untuk mengiringi tari Barong di Ubud digunakan musik traditional Bali yang disebut dengan nama Gambelan. Jenis Gambelan yang digunakan adalah Gamelan Semar Pegulingan. Bagi yang pertama kali mendengar musik Gambelan Semar pegulingan, pastinya akan terdengar aneh di telinga, tapi setelah anda melihat penari yang bergerak mengikuti irama musik Gambelan, anda pastinya akan terbiasa.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Apakah Di Anjurkan Menonton Bersama Anak?
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda liburan di Bali bersama keluarga dan anak-anak, sebelum memutuskan untuk menonton tari Barong Ubud, sebaiknya anda tanyakan dulu kepada anak, apakah mereka berani untuk menonton tari Barong Ubud atau tidak? Caranya dengan menunjukan contoh tarian Barong Ubud melalui media internet di Youtube. Dengan cara ini anda akan tahu, apakah anak anda berani menonton tari barong atau tidak. Jika anak anda tidak berani, maka anda tidak rugi telah membayar tiket masuk tari Barong Ubud, kemudian harus meninggalkan pertujukan tarian barong karena anak anda tidak berani menonton.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        h2 Jadwal Tari Barong Di Ubud Bali
+        p Untuk pementasan tari Barong Ubud, tidak setiap hari diadakan, bagi yang ingin menonton tari barong yang diadakan setiap hari, maka anda harus menonton di daerah Batubulan. Untuk jadwal pementasan tarian Barong Ubud, dapat anda lihat di tabel di bawah.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+         table(border=0 cellpadding=5 cellspacing=10)
+           tr(align='left')
+             td Hari
+             td Lokasi
+             td Jam
+             td Harga Tiket
+           tr(align='left') 
+             td Senin
+             td Sandi Swara Wantilan
+             td 19.00 - 20.30
+             td Rp 75.000
+           tr(align='left') 
+             td Rabu
+             td Puri Saren Ubud
+             td 19.30 - 21.00
+             td Rp 80.000
+           tr(align='left') 
+             td Kamis
+             td Pura Dalem Ubud
+             td 19.30 - 21.00
+             td Rp 50.000
+           tr(align='left') 
+             td Jumat
+             td Puri Saren Ubud
+             td 19.30 - 21.00
+             td Rp 80.000
+         p Catatan: Harga Tiket Pertunjukan Tari Barong Di Ubud, Sewaktu-waktu Dapat Berubah.
+
+      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Jika anda ingin menonton tarian Barong di Bali dan tidak berencana sebelumnya, sebaiknya tanyakan terlebih dahulu mengenai lokasi pementasan dan harga tiket ke supir yang mengantar anda atau melalui media informasi yang disediakan di tempat anda menginap.
+
 
    script(src='build/build.js')
-
-
-
